manifests/manifests/positioning/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: plarail2021-positioning
  namespace: plarail2021
spec:
  selector:
    matchLabels:
      app: plarail2021-positioning
  template:
    metadata:
      labels:
        app: plarail2021-positioning
    spec:
      containers:
        - name: plarail2021-positioning
          image: ghcr.io/ueckoken/plarail2021-soft-positioning:342e32a-1637293457 # {"$imagepolicy": "plarail2021:positioning"}
          imagePullPolicy: Always
          ports:
            - containerPort: 80
