manifests/manifests/positioning/ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: plarial2021-positioning
  namespace: plarail2021
spec:
  routes:
  - kind: Rule
    match: Host(`positioning.chofufes2021.gotti.dev`)
    services:
    - name: plarail2021-positioning
      port: 80
